--- a/sman.rc
+++ b/sman.rc
@@ -1,7 +1,7 @@
 # vim: set ft=sh:
 
-s() {
-  if [[ ${1} == "run" ]] || [[ ${1} == "r" ]]; then
+s(){
+  if [[ ${1} == "run" || ${1} == "r" ]]; then
     eval "$(sman "$@")"
   else
     sman "$@"
@@ -9,35 +9,28 @@ s() {
 }
 
 _escaped_string(){
-  if [[ "$1" =~ ^[-:_[:alnum:]]*$ ]];
-  then
+  if [[ "$1" =~ ^[-:_[:alnum:]]*$ ]]; then
     echo "$1"
-  elif [[ "$1" =~ ^[^\']*$ ]];
-  then
+  elif [[ "$1" =~ ^[^\']*$ ]]; then
     echo "'$1'"
   else
     echo "\"$1\""
   fi
 }
 
-
 _history_command(){
-  if [[ ! -z $BASH_VERSION ]];
-  then
+  if [[ ! -z $BASH_VERSION ]]; then
     echo "history -s"
-  elif [[ ! -z $ZSH_VERSION ]];
-  then
+  elif [[ ! -z $ZSH_VERSION ]]; then
     echo "print -s"
   fi
-
-  }
+}
 
 _append_history(){
   local command
   for arg; do
     local output=$(_escaped_string "$arg")
-    if [[ ! -z $command ]];
-    then
+    if [[ ! -z $command ]]; then
       command="$command $output"
     else
       command="$output"
