--- a/snippets/ssh.yml
+++ b/snippets/ssh.yml
@@ -1,21 +1,20 @@
-# -R 52698:localhost:52698 is for rmate
 ssh:ed:
   do: exec
-  command: ssh -R 52698:localhost:52698 khcheung@edison.nersc.gov
+  command: ssh khcheung@edison.nersc.gov
 ssh:co:
   do: exec
-  command: ssh -R 52698:localhost:52698 khcheung@cori.nersc.gov
+  command: ssh khcheung@cori.nersc.gov
 ssh:go:
   do: exec
-  command: ssh -R 52698:localhost:52698 khcheung@gordita.physics.berkeley.edu
+  command: ssh khcheung@gordita.physics.berkeley.edu
 ssh:to:
   do: exec
   desc: ssh to Tostada, assume on Gordita.
-  command: ssh -R 52698:localhost:52698 192.168.1.80
+  command: ssh 192.168.1.80
 ssh:sp:
   do: exec
   desc: ssh to Stampede from XSEDE
-  command: ssh -R 52698:localhost:52698 tg839817@stampede.tacc.xsede.org
+  command: ssh tg839817@stampede.tacc.xsede.org
 ssh:xd:
   do: exec
   command: ssh -l khcheung login.xsede.org
@@ -23,14 +22,10 @@ gsisp:
   do: exec
   command: gsissh stampede
 
-tunnel:co:
+ssh:tunnel:
   do: exec
-  desc: tunnel a port from Cori to local. 8989 is Juptyer's default. 8080 might be that from snakeviz.
-  command: ssh -N -L localhost:<<port(8080,8989)>>:localhost:<<port>> khcheung@cori.nersc.gov
-tunnel:go:
-  do: exec
-  desc: tunnel a port from Gordita to local. 8989 is Juptyer's default. 8080 might be that from snakeviz.
-  command: ssh -N -L localhost:<<port(8080,8989)>>:localhost:<<port>> khcheung@gordita.physics.berkeley.edu
+  desc: tunnel a port from client to server (-R to reverse). 8989-Juptyer; 8080-snakeviz; 52698-rmate.
+  command: ssh -N -<<direction(L,R)>> localhost:<<port(8080,8989,52698)>>:localhost:<<port>> <<URL(khcheung@cori.nersc.gov,khcheung@edison.nersc.gov,khcheung@gordita.physics.berkeley.edu)>>
 
 rsync:to:co:
   do: exec
