--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -33,3 +33,7 @@ coadd:rm:hdf5:
   do: exec
   desc: delete corrupted hdf5 files under coadd
   command: find . -path '*/coadd/*' -name '*.hdf5' -exec h5delete.py -p 64 {} +
+git:push:ab:
+  do: exec
+  desc: push branch khcheung and cleanup to both bolo and github.
+  command: for branch in khcheung cleanup; do git checkout $branch && git push origin $branch && git push github $branch; done
