--- a/snippets/git.yml
+++ b/snippets/git.yml
@@ -8,7 +8,7 @@ git:log:email:
 git:diff:
   do: exec
   desc: show diff. except deleted files
-  command: git diff --name-status --diff-filter=d <<from-branch>>..<<to-branch>>
+  command: git diff --name-status --diff-filter=d <<frombranch>>..<<tobranch>>
 # routines
 git:remote:add:
   do: exec
