--- a/snippets/bash.yml
+++ b/snippets/bash.yml
@@ -141,3 +141,8 @@ ip:router:
   do: exec
   desc: show the IP address of router
   command: netstat -nr | grep default
+
+badblocks:
+  do: exec
+  desc: check badblocks of a device. n for non-destructive read/write, w for write
+  command: sudo badblocks -<<destructive(n,w)>>vsb 4096 /dev/<<disk>>
