--- a/snippets/git.yml
+++ b/snippets/git.yml
@@ -26,6 +26,10 @@ git:reset:upstream:
   do: exec
   desc: reset branch at origin from remote (e.g. origin is forked from an upstream remote)
   command: git fetch <<remote>> && git checkout <<branch>> && git reset --hard <<remote>>/<<branch>> && git push origin <<branch>> --force
+git:merge:upstream:
+  do: exec
+  desc: merge from upstream
+  command: git fetch <<remote(upstream)>> && git merge <<remote>>/<<branch(master)>>
 git:rm:branch:
   do: exec
   desc: remove a git branch both locally and remotely
