polarbear.yml: add null2full

--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -37,3 +37,8 @@ git:push:ab:
   do: exec
   desc: push branch cleanup and khcheung to both bolo and github.
   command: for branch in cleanup khcheung; do git checkout $branch && git push origin $branch && git push github $branch; done
+# null2full
+null2full:
+  do: exec
+  desc: find all level 1 dir start with null_* and rename them as full_*
+  command: find -mindepth 1 -maxdepth 1 -name 'null_*' | sed 's/^\.\/null_\(.*\)$/mv null_\1 full_\1/g' | xargs -i -n1 -P1 bash -c '$0' {}
