--- a/snippets/ssh.yml
+++ b/snippets/ssh.yml
@@ -31,6 +31,10 @@ lpc:
   do: exec
   desc: connect to 3650
   command: <<command(ssh,mosh)>> kolen@<<host(128.32.117.119,172.22.2.5)>>
+icsx:
+  do: exec
+  desc: connect to icsx
+  command: <<command(ssh,mosh)>> kolen@<<host(172.22.2.9)>>
 server:
   do: exec
   desc: connect to server
