--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -37,6 +37,10 @@ git:push:ab:
   do: exec
   desc: push branch cleanup and khcheung to both bolo and github.
   command: for branch in cleanup khcheung; do git checkout $branch && git push origin $branch && git push github $branch; done
+git:push:pa:
+  do: exec
+  desc: push branch master and python3 to both bolo and github.
+  command: for branch in master python3; do git checkout $branch && git push origin $branch && git push github $branch; done
 # null2full
 null2full:
   do: exec
