--- a/snippets/bash.yml
+++ b/snippets/bash.yml
@@ -5,6 +5,10 @@ fd:
 fd:ext:
   do: exec
   command: find \! -path '*/.git/*' -type f | sed -E 's/^.*([./][^./]+)$/\1/' | sort | uniq -c | sort -n
+fd:dir:
+  do: exec
+  desc: find a name with pattern, and print total no. of such files per 1st level sub-directory
+  command: find -name '*.<<pattern>>' | awk -F '/' '{print $2}' | sort | uniq -c | sort -n
 fd:x:
   do: exec
   command: find . -maxdepth 1 -perm -111 -type f
