--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -46,6 +46,10 @@ null2full:
   do: exec
   desc: find all level 1 dir start with null_* and rename them as full_*
   command: find -mindepth 1 -maxdepth 1 -name 'null_*' | sed 's/^\.\/null_\(.*\)$/mv null_\1 full_\1/g' | xargs -i -n1 -P1 bash -c '$0' {}
+full2null:
+  do: exec
+  desc: find all level 1 dir start with full_* and rename them as null_*
+  command: find -mindepth 1 -maxdepth 1 -name 'full_*' | sed 's/^\.\/full_\(.*\)$/mv full_\1 null_\1/g' | xargs -i -n1 -P1 bash -c '$0' {}
 install:makefile:
   do: exec
   desc: make symlink of makefiles from abx to current directory
