--- a/snippets/bash.yml
+++ b/snippets/bash.yml
@@ -5,6 +5,10 @@ fd:
 fd:ext:
   do: exec
   command: find \! -path '*/.git/*' -type f | sed -E 's/^.*([./][^./]+)$/\1/' | sort | uniq -c | sort -n
+fd:name:
+  do: exec
+  desc: find a pattern in name and print a stat. of freq. per name
+  command: find -name '<<name>>' | sed -E 's/^.*\/([^/]+)$/\1/g' | sort -u 
 fd:dir:
   do: exec
   desc: find a name with pattern, and print total no. of such files per 1st level sub-directory
